[package]
name = "web"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"
description = "Cala Core Example program"
repository = "https://github.com/libcala/cala_core"
license = "CC0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.cala_core]
path = "../../"

[features]
default = []
